--- a/P03_marchal_muriel/page_accueil.scss
+++ b/P03_marchal_muriel/page_accueil.scss
@@ -1,655 +1,15 @@
-@mixin flex-center-column {
-  display : flex ;
-  flex-direction : column ; 
-  justify-content : center ; 
-}
-@mixin flex-center-row {
-  display : flex ; 
-  flex-direction : row ; 
-  justify-content : center ; 
-}
+@import "sass/normes/responsive.scss" ; 
+@import "sass/normes/margin.scss" ; 
+@import "sass/normes/variables.scss" ;
+@import "sass/normes/body.scss" ; 
 
-$primary_color : #9356DC ;
-$secondary_color : #FF79DA ; 
-$third_color : #99E2D0 ; 
+@import "sass/animations/loading_spinner.scss" ;
 
-$breakpoints : (mobile : 767px, tablette : 1000px);
+@import "sass/header/header_page_accueil.scss" ;
+@import "sass/btn/btn_explorer.scss" ;
+@import "sass/fonctionnement.scss" ;
 
-* {margin : 0;}
-  
-body {
-  font-size : 15px ;
-  font-family: 'Roboto', sans-serif ;
-  line-height : 12px ; 
-  color : #000000 ;
-}
+@import "sass/main_restaurants.scss" ; 
+@import "sass/btn/favori.scss" ; 
 
-/*loading spinner*/
-
-body #loading_spinner {
-  background-color: #000000 ;
-  width : 100% ; 
-  height : 1345px ; 
-  @media screen and (max-width: map-get($breakpoints, tablette)){
-    height : 1550px ;
-  }
-  @media (max-width: map-get($breakpoints, mobile)) {
-    height : 1770px ;
-  }
-  position: absolute ;
-  z-index : 2 ;
-    -moz-animation-duration : 2s ;
-    -webkit-animation-duration : 2s ;
-  animation-duration : 2s ;
-    -moz-animation-iteration-count : 1 ;
-    -webkit-animation-iteration-count : 1 ;
-  animation-iteration-count : 1 ;
-    -moz-animation-direction : normal ;
-    -webkit-animation-direction : normal ;
-  animation-direction : normal ;
-    -moz-animation-name : loading_spinner ;
-    -webkit-animation-name : loading_spinner ;
-  animation-name : loading_spinner ;
-    -moz-transition-property : none ;
-    -webkit-transition-property : none ;
-  transition-property : none ;
-    -moz-animation-timing-function : ease-in ;
-    -webkit-animation-timing-function : ease-in ;
-  animation-timing-function : ease-in ;
-    -moz-animation-fill-mode : both ;
-    -webkit-animation-fill-mode : both ;
-  animation-fill-mode : both ;
-
-@keyframes loading_spinner {
-  0% {
-    opacity : 1 ;
-  }
-  95% {
-    opacity : 1 ;
-  }
-  100% {
-    opacity : 0 ; 
-  }
-}
-}
-
-#loading_spinner {
-  position : absolute ; 
-  z-index : 3 ;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-  width: 100%;
-  height: 100%;
-  transform-style: preserve-3d;
-  perspective: 800px;
-  pointer-events: none ; 
-  .primary {
-    border-bottom: 7px solid $primary_color;
-  }
-  .secondary {
-    border-bottom: 7px solid $secondary_color;
-  }
-  .third {
-    border-bottom: 7px solid $third_color;
-  }
-  
-  .arc {
-    position: absolute ;
-    z-index : 4 ; 
-    top: 0;
-    left: 0;
-    width: 350px;
-    height: 350px;
-    border-radius: 50%;
-    margin : 10% 45% ;
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
-      width : 200px ; 
-      height : 200px ; 
-      margin : 30% 40%;
-    }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      width : 164px ; 
-      height : 164px ; 
-      margin : 30% ; 
-    }
-
-    @for $i from 1 through 3 {
-      &:nth-child(#{$i}) {
-        animation-name : rotate#{$i} ;
-        animation-duration : 0.5s ;
-        animation-timing-function: linear ;
-        animation-iteration-count: 4 ;
-        animation-direction: normal ;
-        animation-fill-mode: both ;
-        animation-play-state: running ;
-      }
-    }
-    &:nth-child(1) {
-      animation-delay: -0.8s;
-    }
-    &:nth-child(2) {
-      animation-delay: -0.4s;
-    }
-    &:nth-child(3) {
-      animation-delay: 0s;
-    }
-  }
-}
-
-@keyframes rotate1 {
-  from {
-    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0);
-    opacity : 1 ;
-  }
-
-  to {
-    transform: rotateX(35deg) rotateY(-45deg) rotateZ(1turn);
-    opacity : 0 ;
-  }
-}
-
-@keyframes rotate2 {
-  from {
-    transform: rotateX(50deg) rotateY(10deg) rotateZ(0);
-    opacity : 1 ;
-  }
-
-  to {
-    transform: rotateX(50deg) rotateY(10deg) rotateZ(1turn);
-    opacity : 0 ; 
-  }
-}
-
-@keyframes rotate3 {
-  from {
-    transform: rotateX(35deg) rotateY(55deg) rotateZ(0);
-    opacity : 1 ; 
-  }
-
-  to {
-    transform: rotateX(35deg) rotateY(55deg) rotateZ(1turn);
-    opacity : 0 ; 
-  }
-}
-
-
-.container {
-  width : 1394px ; 
-  margin : auto ; 
-  @media screen and (max-width: map-get($breakpoints, tablette)) {
-    width : 100% ;
-  }
-  @media (max-width: map-get($breakpoints, mobile)) {
-    width : 100% ; 
-  }
-}
-
-/*header*/
-header {
-  @include flex-center-column ;
-   
-  .logo_ohmyfood {
-    width : 40% ;
-    margin : 0 auto ; 
-    padding : 20px 0px ; 
-  }
-}
- 
-  
-/*accueil haut de page*/
-#accueil {
-  @include flex-center-column ;
-  background-color: #F6F6F6;
-  align-items : center ; 
-  width : 100% ;
-  margin : 0 auto ; 
-  padding-bottom : 20px ; 
-    
-  .localisation {
-    background-color: #EAEAEA;
-    font-size : 18px ; 
-    font-weight : bold ;
-    width : 100% ; 
-    text-align : center ; 
-    padding : 10px 0px ; 
-
-    .fa-map-marker-alt {
-      color : #000000 ; 
-      margin-right : 15px ; 
-    }
-  }
-  
-  h1 {
-    font-family: 'Roboto', sans-serif ; 
-    font-size : 24px ; 
-    font-weight : bold ; 
-    color : #000000 ; 
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
-      text-align: center ;
-      line-height: 20px ;
-      width : 70% ;
-    }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      text-align : center ;
-      line-height : 20px ; 
-      width : 70% ;
-    }
-  }
- 
-  p {
-    font-size : 17px ; 
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
-      width : 70% ;
-      text-align : center ; 
-      line-height : 20px ; 
-    }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      width : 70% ; 
-      text-align: center;
-      line-height : 20px ; 
-    }
-  }
-}  
-
-  .explorer {
-    color : #ffffff ; 
-    text-align : center ; 
-      -webkit-background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
-      -moz-background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
-    background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
-    font-size : 20px ; 
-    width : 270px ; 
-    font-weight : bold ; 
-    border : none ;
-    box-shadow : 3px 3px 3px #e4dede ; 
-    border-radius : 30px ; 
-    padding : 10px 20px ; 
-    margin : 3% 45% ; 
-    position : relative ;
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
-      margin : 4% 45% 8% ; 
-    } 
-    @media (max-width: map-get($breakpoints, mobile)) {
-      margin : 4% 30% 8% ; 
-    }
-    
-    &:hover {
-      cursor : pointer ; 
-    }
-
-    &:hover::before {
-      content: '';
-      position: absolute;
-      top: 0 ;
-      left: 0 ;
-      width : 100% ; 
-      height : 100% ;
-        -webkit-transform : scaleX(1) ; 
-        -moz-transform : scaleX(1) ;
-      transform : scaleX(1) ;
-        -webkit-transform-origin : left ; 
-        -moz-transform-origin : left ;
-      transform-origin : left ;
-    }
-    
-    span {
-      position : relative ; 
-      z-index : 1 ; 
-    }
-  }
-
-.explorer::before {
-  content : "" ; 
-  position : absolute ;
-  top : 0 ; 
-  left : 0 ; 
-  width : 100% ; 
-  height : 100% ; 
-  border-radius : 30px ;   
-    background : -webkit-gradient(linear, left bottom, right top,from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
-    background : -moz-gradient(linear, left bottom, right top, from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
-  background : gradient(linear, left bottom, right top, from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
-  box-shadow : 3px 3px 3px darken(#e4dede, 35%) ; 
-    -webkit-transform : scaleX(0) ; 
-    -moz-transform : scaleX(0) ;
-  transform : scaleX(0) ;
-    -webkit-transform-origin : right ; 
-    -moz-transform-origin : right ;
-  transform-origin : right ;
-    -webkit-transition : transform, .1s ; 
-    -moz-transition : transform, .1s ; 
-  transition : transform .1s ; 
-}
-  
-/*fonctinnement*/
-#fonctionnement {
-  @include flex-center-column ;
-  align-items : center ; 
-  margin : auto ; 
-  padding-top : 10px ; 
-  @media screen and (max-width: map-get($breakpoints, tablette)) {
-    width : 90% ; 
-    align-items : flex-start ; 
-    margin-top : 15px ; 
-  }
-  @media (max-width: map-get($breakpoints, mobile)) {
-    width : 90% ; 
-    align-items : flex-start ; 
-    margin-top : 15px ; 
-  }
-  
-  h2 {
-    font-family: 'Roboto', sans-serif ; 
-    font-size : 20px ; 
-    font-weight : bold ; 
-    color : #000000 ; 
-  }
-
-  .fonctionnement {
-    @include flex-center-row ;
-    width : 100% ; 
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
-      @include flex-center-column ;
-    }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      @include flex-center-column ; 
-    }
-  } 
-  
-  .categorie { 
-    font-weight : bold ;
-    display : flex ; 
-    flex-direction : row ;
-    align-items : center ; 
-    width : 35% ;
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
-      width : 100% ; 
-    }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      width : 100% ; 
-    }
-         
-    .nombre {
-      background-color: $primary_color;
-      color : #ffffff ; 
-      clip-path: circle(40%);
-      padding : 15px ; 
-      position : absolute ; 
-      z-index : 1 ;
-      margin-left : 4% ; 
-      @media screen and (max-width: map-get($breakpoints, tablette)) {
-        margin-left : 16% ; 
-      }
-      @media (max-width: map-get($breakpoints, mobile)) {
-        margin-left : 1% ;
-      }
-    }
-  
-    .fonctionnement_description {
-      font-weight : bold ; 
-      background-color : #F6F6F6 ; 
-      display : flex ;
-      flex-direction: row ;
-      justify-content : space-around ; 
-      box-shadow: 2px 3px 7px #e0dede;
-      border-radius : 25px ;
-      width : 60% ;
-      margin : 4% 20% ; 
-      padding : 30px ;
-      z-index : 0 ;  
-      @media (max-width: map-get($breakpoints, mobile)) {
-        width : 80% ;
-        margin : 4% ; 
-     
-      }
-          
-        .fa-mobile-alt, .fa-list-ul, .fa-store {
-          color : #333131 ; 
-          &:hover {
-            cursor : pointer ; 
-            color: darken($primary-color, 20%);
-          } 
-        }
-   
-      &:hover {
-        cursor : pointer ; 
-        background-color: lighten($primary-color, 35%);
-      } 
-           
-    }
-  }
-}
- 
- 
-/*restaurants*/
-#restaurants {
-  @include flex-center-column ;
-  background-color : #F6F6F6;
-  align-items : center ; 
-  border-radius : 20px ;
-  padding : 20px ; 
-  margin-bottom : 15px ; 
-  @media screen and (max-width:1000px) {
-    border-radius : 0px ; 
-    margin-bottom : 0px ; 
-  }
-  @media (max-width: map-get($breakpoints, mobile)) {
-    align-items : flex-start ;
-    border-radius : 0px ; 
-    margin-bottom : 0px ; 
-  }
-    
-  h2 {
-    font-family: 'Roboto', sans-serif ; 
-    font-size : 20px ; 
-    font-weight : bold ; 
-    color : #000000 ; 
-  }
-
-  .liste_restaurants {
-    display : flex ; 
-    flex-direction : row ;
-    justify-content : space-around ; 
-    flex-wrap : wrap ;
-    width : 80% ;    
-    padding : 10px 0px ; 
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
-      justify-content : space-between ; 
-      width : 70% ; 
-    }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      @include flex-center-column ;
-      margin : 0 auto ; 
-      width : auto ; 
-      }
-
-      .restaurant {
-        background-color : #ffffff ;
-        display : flex ;
-        flex-wrap : wrap ; 
-        flex-direction : column ; 
-        border-radius : 20px ;
-        margin : 10px ;         
-        padding : 5px ; 
-        width : 40% ; 
-        height : 250px ;
-        box-shadow : 2px 2px 3px #f6f6f6 ;
-        @media screen and (max-width: map-get($breakpoints, tablette)) {
-          width : 250px ; 
-          height : 160px ;
-          margin : 10px 0px ;
-        }
-        @media (max-width: map-get($breakpoints, mobile)) {
-          width : 250px ; 
-          height : 160px ;
-          margin : 10px 0px ;
-        }
-        
-          a {
-            text-decoration : none ;
-          }
-     
-          .restaurant_photo {  
-            object-fit: cover ;
-            width : 100% ;
-            height : 180px;    
-            border-radius : 20px 20px 0px 0px;
-            position : relative ; 
-            z-index : 0 ;
-            @media screen and (max-width: map-get($breakpoints, tablette)) {
-              height : 110px; 
-            }
-            @media (max-width: map-get($breakpoints, mobile)) {
-              height : 110px; 
-            }
-          }
-  
-          .nouveau {
-            color : darken($third_color, 40%) ;
-            background-color : $third_color ; 
-            font-weight : bold ; 
-            text-align : center ; 
-            position : absolute ; 
-            padding : 5px ; 
-            z-index : 1 ;
-            margin-left : 340px ; 
-            margin-top : 17px ; 
-            @media screen and (max-width: map-get($breakpoints, tablette)) {
-              margin-left : 167px ; 
-            }
-            @media (max-width: map-get($breakpoints, mobile)) {
-              margin-left : 167px ; 
-            }
-          }
-             
-          .description {
-            display : flex ;
-            flex-direction : row ;
-            justify-content : space-between ; 
-            align-items : center ; 
-
-            .informations {
-              display : flex ; 
-              flex-direction : column ; 
-              
-              h3, .lieu {
-                margin : 5px ;
-                font-family : 'Roboto', sans-serif ; 
-                color : #000000 ; 
-              }
-              
-              h3 {
-                font-size : 19px ; 
-                font-weight : bold ; 
-              }
-
-              .lieu {
-                font-size : 17px ; 
-              }
-
-            }
-
-            i.empty {
-              position : absolute ;
-              z-index : 1 ;
-              margin-left : 380px ;
-              font-size : 30px ;
-              padding : 5px ; 
-              color : #000000 ; 
-              @media screen and (max-width: map-get($breakpoints, tablette)) {
-                margin-left : 210px ; 
-              }
-              @media (max-width: map-get($breakpoints, mobile)) {
-                margin-left : 210px ; 
-              }
-              &:hover {
-                cursor : pointer ;
-                display : none ;
-                position : relative ;
-                z-index : 0 ;
-              }
-            }
-
-            i.full {
-              position : relative ;
-              z-index : 0 ;
-              font-size : 32px ;
-              padding : 5px ; 
-              color : #ffffff ; 
-              opacity : 0 ; 
-              &:hover {
-                cursor : pointer ; 
-                position : absolute ;
-                opacity : 1 ; 
-                z-index : 1 ; 
-                margin-left : 379px ; 
-                margin-top : 0px ; 
-                @media screen and (max-width: map-get($breakpoints, tablette)) {
-                  margin-left : 209px ; 
-                }
-                @media (max-width: map-get($breakpoints, mobile)) {
-                  margin-left : 209px ; 
-                }
-                font-weight : bold ; 
-                  background : -webkit-gradient(linear, left bottom, right top, from($secondary_color), to($primary_color));
-                  background : -moz-gradient(linear, left bottom, right top, from($secondary_color), to($primary_color));
-                background : gradient(linear, left bottom, right top, from($secondary_color), to($primary_color));
-                  -webkit-background-clip : text ; 
-                  -moz-background-clip : text ;
-                background-clip : text ;
-	                -webkit-text-fill-color : transparent ; 
-                  -moz-text-fill-color : transparent ; 
-                color : transparent ; 
-                transition: opacity .4s ease-in-out;
-              }  
-            }
-          }
-        }
-      }     
-  }
-
-/*footer*/
-footer {
-  font-size : 22px ; 
-  line-height : 25px ; 
-  color : #ffffff ; 
-  background-color : #000000 ;
-  padding : 10px 0px ; 
-
-  .container {
-    display : flex ; 
-    flex-direction : column ; 
-    justify-content : center ; 
-    align-items : center ;
-    line-height : 35px ; 
-    @media (max-width: map-get($breakpoints, mobile)) {
-      width : 97% ;
-      align-items : flex-start ; 
-      margin-left : 10px ; 
-    }
-    
-    h4 {
-      font-family : 'shrikhand', 'cursive' ;
-      font-size : 25px ; 
-      color : #ffffff ; 
-      margin-bottom : 10px ; 
-    }
-
-    .footer_liste {
-      font-weight : bold ; 
-         
-      .fa-utensils, .fa-hands-helping {
-        color : #ffffff ; 
-      }
- 
-    }
-      
-    a {
-        color : #ffffff ; 
-        text-decoration : none ; 
-    }
-  }
-} 
-  
+@import "sass/footer.scss" ; 
