--- a/P03_marchal_muriel/menu.css
+++ b/P03_marchal_muriel/menu.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+}
+
+body {
+  font-size: 15px;
+  font-family: "Roboto", sans-serif;
+  line-height: 12px;
+  color: #000000;
+}
+
 .container {
   width: 1394px;
   margin: auto;
@@ -13,13 +24,6 @@
   }
 }
 
-body {
-  font-size: 15px;
-  font-family: "Roboto", sans-serif;
-  line-height: 12px;
-}
-
-/*header*/
 header {
   display: flex;
   flex-direction: column;
@@ -161,6 +165,7 @@ header .restaurant_nom .fa-heart {
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
+    padding-top: 3%;
     border: 0px;
   }
 }
@@ -170,6 +175,7 @@ header .restaurant_nom .fa-heart {
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
+    padding-top: 5%;
     border: 0px;
   }
 }
@@ -181,9 +187,9 @@ header .restaurant_nom .fa-heart {
 }
 @media screen and (max-width: 1000px) {
   #menus #entrees, #menus #plats, #menus #desserts {
-    width: 80%;
+    width: 70%;
     justify-content: center;
-    margin: 0% 5%;
+    margin: 2% 5%;
     padding: 0;
   }
 }
@@ -191,6 +197,7 @@ header .restaurant_nom .fa-heart {
   #menus #entrees, #menus #plats, #menus #desserts {
     width: 90%;
     justify-content: center;
+    margin: 4% auto;
     padding: 0;
   }
 }
@@ -200,6 +207,7 @@ header .restaurant_nom .fa-heart {
   width: 60px;
   border-bottom: solid 3px #99E2D0;
   padding-bottom: 10px;
+  margin-bottom: 3%;
 }
 #menus #entrees .entrees, #menus #entrees .plats, #menus #entrees .desserts, #menus #plats .entrees, #menus #plats .plats, #menus #plats .desserts, #menus #desserts .entrees, #menus #desserts .plats, #menus #desserts .desserts {
   background-color: #ffffff;
@@ -274,7 +282,6 @@ header .restaurant_nom .fa-heart {
   margin-bottom: 3px;
   font-weight: normal;
   overflow: hidden;
-  white-space: hidden;
   -webkit-text-overflow: "...";
   -moz-text-overflow: "...";
   text-overflow: "...";
@@ -286,134 +293,6 @@ header .restaurant_nom .fa-heart {
 }
 #menus #entrees .entrees .fa-check-circle, #menus #entrees .plats .fa-check-circle, #menus #entrees .desserts .fa-check-circle, #menus #plats .entrees .fa-check-circle, #menus #plats .plats .fa-check-circle, #menus #plats .desserts .fa-check-circle, #menus #desserts .entrees .fa-check-circle, #menus #desserts .plats .fa-check-circle, #menus #desserts .desserts .fa-check-circle {
   color: #ffffff;
-}
-
-.commander {
-  color: #ffffff;
-  text-align: center;
-  -webkit-background: linear-gradient(to right bottom, #FF79DA, #9356DC);
-  -moz-background: linear-gradient(to right bottom, #FF79DA, #9356DC);
-  background: linear-gradient(to right bottom, #FF79DA, #9356DC);
-  font-size: 20px;
-  font-weight: bold;
-  border-radius: 30px;
-  box-shadow: 3px 3px 3px #e4dede;
-  margin: 3% 45%;
-  padding: 10px 20px;
-  position: relative;
-}
-@media screen and (max-width: 1000px) {
-  .commander {
-    margin: 4% 40% 8%;
-  }
-}
-@media (max-width: 767px) {
-  .commander {
-    margin: 4% 30% 8%;
-  }
-}
-.commander:hover {
-  cursor: pointer;
-}
-.commander:hover::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: scaleX(1);
-  -moz-transform: scaleX(1);
-  transform: scaleX(1);
-  -webkit-transform-origin: left;
-  -moz-transform-origin: left;
-  transform-origin: left;
-}
-.commander span {
-  position: relative;
-  z-index: 1;
-}
-
-.commander::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 30px;
-  background: -webkit-gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
-  background: -moz-gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
-  background: gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
-  box-shadow: 3px 3px 3px #947c7c;
-  -webkit-transform: scaleX(0);
-  -moz-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transform-origin: right;
-  -moz-transform-origin: right;
-  transform-origin: right;
-  -webkit-transition: transform, 0.1s;
-  -moz-transition: transform, 0.1s;
-  transition: transform 0.1s;
-}
-
-/*footer*/
-footer {
-  font-size: 22px;
-  line-height: 25px;
-  color: #ffffff;
-  background-color: #000000;
-  padding: 10px 0px;
-}
-footer .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  line-height: 35px;
-}
-@media (max-width: 767px) {
-  footer .container {
-    width: 97%;
-    align-items: flex-start;
-    margin-left: 10px;
-  }
-}
-footer .container h4 {
-  font-family: "shrikhand", "cursive";
-  font-size: 25px;
-  color: #ffffff;
-  margin-bottom: 10px;
-}
-footer .container .footer_liste {
-  font-weight: bold;
-}
-footer .container .footer_liste .fa-utensils, footer .container .footer_liste .fa-hands-helping {
-  color: #ffffff;
-}
-footer .container a {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-/*animations*/
-.entrees, .plats, .desserts {
-  -moz-transition: all 1s ease-in;
-  -webkit-transition: all 1s ease-in;
-  transition: all 1s ease-in;
-}
-.entrees:hover, .plats:hover, .desserts:hover {
-  cursor: pointer;
-}
-.entrees:hover .fa-check-circle, .plats:hover .fa-check-circle, .desserts:hover .fa-check-circle {
-  visibility: visible;
-  font-size: 30px;
-  padding: 15px;
-  border-radius: 0px 10px 10px 0px;
-  background-color: #99E2D0;
-  -moz-transform: rotate(360deg);
-  -webkit-transform: rotate(360deg);
-  transform: rotate(360deg);
 }
 
 #entrees {
@@ -1074,6 +953,133 @@ footer .container a {
       opacity: 1;
     }
   }
+}
+.entrees, .plats, .desserts {
+  -moz-transition: all 1s ease-in;
+  -webkit-transition: all 1s ease-in;
+  transition: all 1s ease-in;
+}
+.entrees:hover, .plats:hover, .desserts:hover {
+  cursor: pointer;
+}
+.entrees:hover .fa-check-circle, .plats:hover .fa-check-circle, .desserts:hover .fa-check-circle {
+  visibility: visible;
+  font-size: 30px;
+  padding: 15px;
+  border-radius: 0px 10px 10px 0px;
+  background-color: #99E2D0;
+  -moz-transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  transform: rotate(360deg);
+}
+
+.btn_commander {
+  color: #ffffff;
+  text-align: center;
+  -webkit-background: linear-gradient(to right bottom, #FF79DA, #9356DC);
+  -moz-background: linear-gradient(to right bottom, #FF79DA, #9356DC);
+  background: linear-gradient(to right bottom, #FF79DA, #9356DC);
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 30px;
+  box-shadow: 3px 3px 3px #e4dede;
+  margin: 3% 45%;
+  padding: 10px 20px;
+  position: relative;
+}
+@media screen and (max-width: 1000px) {
+  .btn_commander {
+    margin: 4% 40% 8%;
+  }
+}
+@media (max-width: 767px) {
+  .btn_commander {
+    margin: 4% 30% 8%;
+  }
+}
+.btn_commander:hover {
+  cursor: pointer;
+}
+.btn_commander:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: scaleX(1);
+  -moz-transform: scaleX(1);
+  transform: scaleX(1);
+  -webkit-transform-origin: left;
+  -moz-transform-origin: left;
+  transform-origin: left;
+}
+.btn_commander span {
+  position: relative;
+  z-index: 1;
+}
+
+.btn_commander::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  background: -webkit-gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
+  background: -moz-gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
+  background: gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
+  box-shadow: 3px 3px 3px #947c7c;
+  -webkit-transform: scaleX(0);
+  -moz-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: right;
+  -moz-transform-origin: right;
+  transform-origin: right;
+  -webkit-transition: transform, 0.1s;
+  -moz-transition: transform, 0.1s;
+  transition: transform 0.1s;
+}
+
+footer {
+  font-size: 22px;
+  line-height: 25px;
+  color: #ffffff;
+  background-color: #000000;
+  padding: 10px 0px;
+}
+footer .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  line-height: 35px;
+}
+@media (max-width: 767px) {
+  footer .container {
+    width: 97%;
+    align-items: flex-start;
+    margin-left: 10px;
+  }
+}
+footer .container div {
+  margin-left: 3%;
+}
+footer .container .ohmyfood_footer {
+  filter: invert(100%);
+  width: 30%;
+  margin: 3%;
+}
+footer .container .footer_liste {
+  font-weight: bold;
+}
+footer .container .footer_liste .fa-utensils, footer .container .footer_liste .fa-hands-helping {
+  color: #ffffff;
+}
+footer .container a {
+  color: #ffffff;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=menu.css.map */
