--- a/P03_marchal_muriel/sass/animations/loading_spinner.scss
+++ b/P03_marchal_muriel/sass/animations/loading_spinner.scss
@@ -3,12 +3,6 @@
 body #loading_spinner {
     background-color: #000000 ;
     width : 100% ; 
-    @media screen and (max-width: map-get($breakpoints, tablette)){
-      height : 1550px ;
-    }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      height : 1770px ;
-    }
     position: absolute ;
     z-index : 2 ;
       -moz-animation-duration : 2.5s ;
@@ -73,19 +67,19 @@ body #loading_spinner {
       z-index : 4 ; 
       top: 0;
       left: 0;
-      width: 350px;
-      height: 350px;
+      width : 164px ; 
+      height : 164px ; 
+      margin : 30% ; 
       border-radius: 50%;
-      margin : 10% 45% ;
-      @media screen and (max-width: map-get($breakpoints, tablette)) {
+      @media (min-width: map-get($breakpoints, tablette)) {
         width : 200px ; 
         height : 200px ; 
         margin : 20% 40%;
       }
-      @media (max-width: map-get($breakpoints, mobile)) {
-        width : 164px ; 
-        height : 164px ; 
-        margin : 30% ; 
+      @media screen and (min-width: map-get($breakpoints, desktop)) {
+        width: 350px;
+        height: 350px;
+        margin : 10% 45% ;
       }
   
       @for $i from 1 through 3 {
@@ -173,15 +167,15 @@ body #loading_spinner {
     z-index : 5 ;
     top: 0;
     left: 0;
-    width : 25% ;
-    margin : 15% 40% ;
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
+     width : 50% ; 
+      margin : 40% 25% ;
+    @media (min-width: map-get($breakpoints, tablette)) {
       width : 40% ; 
       margin : 25% 30%;
     }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      width : 50% ; 
-      margin : 40% 25% ; 
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+      width : 25% ;
+      margin : 15% 40% ;
     }
       -moz-animation-duration : 0.3s ;
       -webkit-animation-duration : 0.3s ;
