--- a/P03_marchal_muriel/sass/fonctionnement.scss
+++ b/P03_marchal_muriel/sass/fonctionnement.scss
@@ -1,17 +1,16 @@
 #fonctionnement {
   @include flex-center-column ;
-  align-items : center ; 
-  margin : auto ; 
-  padding-top : 10px ; 
-  @media screen and (max-width: map-get($breakpoints, tablette)) {
-    width : 90% ; 
-    align-items : flex-start ; 
-    margin-top : 15px ; 
+  width : 90% ; 
+  align-items : flex-start ; 
+  margin-top : 15px ; 
+  margin-left : 2% ; 
+  padding-top : 10px ;
+  @media (min-width: map-get($breakpoints, tablette)) {
+    margin : 0 auto ; 
+    width : 100% ; 
   }
-  @media (max-width: map-get($breakpoints, mobile)) {
-    width : 90% ; 
-    align-items : flex-start ; 
-    margin-top : 15px ; 
+  @media screen and (min-width: map-get($breakpoints, desktop)) {
+    align-items : center ; 
   }
     
   h2 {
@@ -19,16 +18,17 @@
     font-size : 20px ; 
     font-weight : bold ; 
     color : #000000 ; 
+    margin : 3% ; 
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+      margin : 0 ; 
+    }
   }
   
   .fonctionnement {
-    @include flex-center-row ;
+    @include flex-center-column ; 
     width : 100% ; 
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
-      @include flex-center-column ;
-    }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      @include flex-center-column ; 
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+      @include flex-center-row ;
     }
   } 
     
@@ -37,12 +37,9 @@
     display : flex ; 
     flex-direction : row ;
     align-items : center ; 
-    width : 35% ;
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
-      width : 100% ; 
-    }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      width : 100% ; 
+    width : 100% ; 
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+      width : 35% ;
     }
   
     .nombre {
@@ -52,32 +49,15 @@
       padding : 15px ; 
       position : absolute ; 
       z-index : 1 ;
-      margin-left : 4% ; 
-      @media screen and (max-width: map-get($breakpoints, tablette)) {
+      margin-left : 1% ;
+      @media (min-width: map-get($breakpoints, tablette)) {
         margin-left : 16% ; 
       }
-      @media (max-width: map-get($breakpoints, mobile)) {
-        margin-left : 1% ;
+      @media screen and (min-width: map-get($breakpoints, desktop)) {
+        margin-left : 4% ;
       }
     }
   
-    .fa-mobile-alt, .fa-list-ul, .fa-store {
-      position : absolute ;
-      z-index : 1 ; 
-      margin-left : 7% ; 
-      color : #333131 ;       
-      @media screen and (max-width: map-get($breakpoints, tablette)) {
-        margin-left : 25% ; 
-      }
-      @media (max-width: map-get($breakpoints, mobile)) {
-        margin-left : 15% ;
-      }
-      &:hover {
-        cursor : pointer ; 
-        color: darken($primary-color, 15%);
-      }    
-    }
-     
     .fonctionnement_description {
       position : relative ;
       font-weight : bold ; 
@@ -87,19 +67,33 @@
       justify-content : flex-start ; 
       box-shadow: 2px 3px 7px #e0dede;
       border-radius : 25px ;
-      width : 60% ;
-      margin : 4% 20% ; 
-      padding : 5% 0% 5% 15% ;
-      z-index : 0 ;  
-      @media (max-width: map-get($breakpoints, mobile)) {
-        width : 80% ;
+      width : 80% ;
         margin : 4% ;  
-        padding : 8% 0% 8% 22% ;      
+        padding : 8% 0% 8% 22% ;  
+      z-index : 0 ;  
+      @media (min-width: map-get($breakpoints, tablette)) {
+        width : 60% ;
+        margin : 2% 20% ; 
+        padding : 5% 0% 5% 15% ;
+      }
+      @media screen and (min-width: map-get($breakpoints, desktop)) {
+        width : 60% ;
+        margin : 4% 20% ; 
+        padding : 5% 0% 5% 15% ;
       }
       &:hover {
         cursor : pointer ;
         background-color: lighten($primary-color, 35%) ;
         color : #000000 ; 
+        .fa-mobile-alt, .fa-list-ul, .fa-store {
+          color : darken($primary-color, 15%) ; 
+        }
+      }
+      .fa-mobile-alt, .fa-list-ul, .fa-store {
+        position : absolute ;
+        z-index : 1 ; 
+        margin-left : -10% ; 
+        color : #333131 ;  
       }
     }  
   }
