--- a/P03_marchal_muriel/sass/header/header_menu.scss
+++ b/P03_marchal_muriel/sass/header/header_menu.scss
@@ -6,15 +6,12 @@ header {
     margin-bottom : 20px ; 
   
     .container {
-      margin-top : 10px ; 
+      width : 100% ;  
+      margin : 0 ; 
       background-color : #ffffff ; 
-      @media screen and (max-width: map-get($breakpoints, tablette)) {
-        width : 100% ;
-        margin : 0 ; 
-      }
-      @media (max-width: map-get($breakpoints, mobile)) {
-        width : 100% ;  
-        margin : 0 ; 
+      @media screen and (min-width: map-get($breakpoints, desktop)) {
+        width : 1394px ; 
+        margin-top : 10px ; 
       }
     }
     
@@ -26,80 +23,68 @@ header {
     }
   
     #logo_header {
-      width : 30% ;
-      margin : 0.5% 32% ; 
-      @media screen and (max-width: map-get($breakpoints, tablette)) {
-        width : 35% ; 
-        margin : 2% 30% ; 
-      }
-      @media (max-width: map-get($breakpoints, mobile)) {
-        width : 35% ; 
-        margin : 2% 30% ; 
+      width : 35% ; 
+      margin : 2% 30% ;  
+      @media screen and (min-width: map-get($breakpoints, desktop)) {
+        width : 30% ;
+        margin : 0.5% 32% ;
       }
     }
       
     #photo_header {
       object-fit : cover ;
       position : relative ; 
-      width : 33%; 
+      width : 100% ;
       height : 300px ; 
-      margin : 0% 30% auto ;
+      margin : 0px ; 
       z-index : 1 ;
-      @media screen and (max-width: map-get($breakpoints, tablette)) {
-        width : 100% ;
-        margin : 0px ; 
-      }
-      @media (max-width: map-get($breakpoints, mobile)) {
-        width : 100% ;
-        margin : 0px ;
+      @media screen and (min-width: map-get($breakpoints, desktop)) {
+        width : 33%; 
+        margin : 0% 30% auto ;
       }
     }
     
     .restaurant_nom {
-      width : 466px ; 
-      background-color : #ffffff ; 
+      width : 100% ;
+      background-color : #f6f6f6 ; 
+      height : 50px ;       
       display : flex ; 
       flex-direction : row ;
       justify-content : space-between ; 
-      border-radius : 30px ; 
+      border-radius : 30px 30px 0px 0px ; 
       position : absolute ;
       padding-top : 10px ; 
       z-index : 2 ;
-      margin-left : 415px ; 
+      margin-left : 0px ; 
       margin-top : -35px ; 
-      @media screen and (max-width: map-get($breakpoints, tablette)) {
-        width : 100% ;
-        background-color : #f6f6f6 ; 
-        height : 50px ; 
-        margin-left : 0px ; 
-        border-radius : 30px 30px 0px 0px ; 
-      }
-      @media (max-width: map-get($breakpoints, mobile)) {
-        width : 100% ;
-        background-color : #f6f6f6 ; 
-        height : 50px ; 
-        margin-left : 0px ; 
-        border-radius : 30px 30px 0px 0px ; 
+      @media screen and (min-width: map-get($breakpoints, desktop)) {
+        width : 466px ; 
+        background-color : #ffffff ; 
+        margin-left : 415px ; 
+        border-radius : 30px ; 
       }
   
       h1 {
+        width : 80% ;
         padding-left : 10px ; 
         font-family: 'Shrikhand', 'cursive' ;
-        font-size : 25px ; 
+        font-size : 28px ; 
         font-weight : bold ; 
         letter-spacing : 1.5px ; 
-        @media screen and (max-width: map-get($breakpoints, tablette)) {
+        text-align : left ;
+        line-height : 0px ; 
+        margin-left : 15px ; 
+        @media (min-width: map-get($breakpoints, tablette)) {
           text-align: center ;
           line-height: 20px ;
           width : 70% ;
         }
-        @media (max-width: map-get($breakpoints, mobile)) {
-          text-align : left ;
-          font-size : 28px ; 
-          line-height : 0px ; 
-          width : 80% ;
-          margin-left : 15px ; 
-        } 
+        @media screen and (min-width: map-get($breakpoints, desktop)) {
+          width : 40% ; 
+          font-size : 25px ; 
+          text-align : center ; 
+          line-height : 25px ; 
+        }
       }
     
         .fa-heart {
