--- a/P03_marchal_muriel/sass/main_menu.scss
+++ b/P03_marchal_muriel/sass/main_menu.scss
@@ -1,39 +1,38 @@
 #menus {
     background-color: #f6f6f6 ;
-    @include flex-center-row ; 
-    border-radius : 10px ; 
+    @include flex-center-column ;
     width : 100% ;
-    margin-top : 30px ; 
+    border-radius : 10px ; 
+    margin : 0 auto ; 
+    padding-top : 5% ; 
     padding-bottom : 15px ; 
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
+    @media (min-width: map-get($breakpoints, tablette)) {
       @include flex-center-column ;
-      margin : 0 auto ;
       padding-top : 3% ; 
-      border : 0px ;  
     }
-    @media (max-width: map-get($breakpoints, mobile)) {
-      @include flex-center-column ;
-        margin : 0 auto ; 
-        padding-top : 5% ; 
-        border : 0px ; 
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+      @include flex-center-row ; 
+      margin-top : 30px ; 
     }
     
     #entrees, #plats, #desserts {
       display : flex ; 
       flex-direction : column ;
-      width : 30% ; 
-      padding: 10px 15px ;  
-      @media screen and (max-width: map-get($breakpoints, tablette)) {
+      width : 90% ; 
+      justify-content: center ;
+      margin : 4% auto ;
+      padding : 0 ; 
+      @media (min-width: map-get($breakpoints, tablette)) {
         width : 70% ; 
         justify-content : center ;
         margin : 2% 5% ;
         padding : 0 ;
       }
-      @media (max-width: map-get($breakpoints, mobile)) {
-        width : 90% ; 
-        justify-content: center ;
-        margin : 4% auto ;
-        padding : 0 ; 
+      @media screen and (min-width: map-get($breakpoints, desktop)) {
+        width : 30% ; 
+        justify-content : space-around ; 
+        margin : 0 auto ;
+        padding: 10px 15px ;  
       }
       
       h2 {
@@ -48,25 +47,18 @@
       .entrees, .plats, .desserts {
         background-color: #ffffff;
         display : flex ; 
-        flex-direction : row ;
-        justify-content : space-between ;
-        width : 100% ;
+        @include flex-center-row ;
+        padding : 0px ; 
+        margin : 8px auto ; 
         height : 60px ;
-        margin : 8px ;   
         border-radius : 10px ; 
-        box-shadow : 4px 3px 5px #635d5d ; 
-        @media screen and (max-width: map-get($breakpoints, tablette)) {
-          @include flex-center-row ;
-          width : 90% ; 
-          border : 0px ; 
-          box-shadow : none ;
-          margin : 8px auto ; 
-        }
-        @media (max-width: map-get($breakpoints, mobile)) {
-          @include flex-center-row ;
-          padding : 0px ; 
-          box-shadow : none ; 
-          margin : 8px auto ; 
+        width : 90% ; 
+        @media screen and (min-width: map-get($breakpoints, desktop)) {
+          width : 100% ;
+          flex-direction : row ;
+          justify-content : space-between ;
+          box-shadow : 4px 3px 5px #635d5d ; 
+          margin : 8px ;   
         }
         
         .menu {
@@ -75,16 +67,15 @@
           justify-content : space-between ;
           width : 100% ; 
           height : 65px ; 
-          padding-left : 5px ; 
+          padding : 0px ; 
           white-space: nowrap;
           overflow: hidden;
             -webkit-text-overflow : '....' ; 
             -moz-text-overflow : '...' ; 
           text-overflow: '...';
-          @media (max-width: map-get($breakpoints, mobile)) {
-            padding : 0px ; 
+          @media screen and (min-width: map-get($breakpoints, desktop)) {
+            padding-left : 5px ; 
           }
-          
     
           h3 {
             font-family : 'Roboto', sans-serif ; 
