--- a/P03_marchal_muriel/sass/normes/body.scss
+++ b/P03_marchal_muriel/sass/normes/body.scss
@@ -9,13 +9,10 @@ body {
 }
 
 .container {
-  width : 1394px ; 
+  width : 100% ;
   margin : auto ; 
-  @media screen and (max-width: map-get($breakpoints, tablette)) {
-    width : 100% ;
-  }
-  @media (max-width: map-get($breakpoints, mobile)) {
-    width : 100% ; 
+  @media screen and (min-width: map-get($breakpoints, desktop)) {
+    width : 1394px ;
   }
 }
 
