--- a/sass/themes/animation_check_circle.scss
+++ b/sass/themes/animation_check_circle.scss
@@ -1,18 +1,21 @@
 .entrees, .plats, .desserts {
-    -moz-transition : all 1s ease-in ;
-    -webkit-transition : all 1s ease-in;
-	transition : all 1s ease-in;
+  overflow : hidden ; 
+    -moz-transition : all 2s ease-out ;
+    -webkit-transition : all 2s ease-out;
+	transition : transform 2s ease-out;
   &:hover {
     cursor : pointer ;
     .fa-check-circle {
-      visibility : visible ; 
       font-size : 30px ; 
       padding : 15px ; 
-      border-radius : 0px 10px 10px 0px ;
-      background-color : $third_color; 
-    	  -moz-transform : rotate(360deg);
-	      -webkit-transform : rotate(360deg);
-	    transform : rotate(360deg);
+        border-radius : 0px 10px 10px 0px ; 
+      background-color : $third_color ; 
+        -moz-transform: rotateZ(2turn) translate(0px,0px);
+        -webkit-transform: rotateZ(2turn) translate(0px,0px);
+      transform: rotateZ(2turn) translate(0px 0px) ;
+        -moz-transition : transform 2s ease-out ; 
+        -webkit-transition : transform 2s ease-out ;
+      transition : transform 2s ease-out ; 
     }
   }
 }
