--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -7,19 +7,19 @@ header {
   
   .container {
     width : 100% ;  
-    margin : 0 ; 
+    margin : $margin_none ; 
     background-color : $primary_background ; 
     @media screen and (min-width: map-get($breakpoints, desktop)) {
       width : 1394px ; 
-      margin-top : 10px ; 
+      margin-top : $margin-m ; 
     }
   }
     
   .fa-arrow-left {
     position : absolute ; 
     color : #000000 ; 
-    font-size : 20px ; 
-    margin : 10px 15px 25px 25px ;
+    font-size : $font-size2 ; 
+    margin : $margin-l ;
   }
   
   #logo_header {
@@ -27,7 +27,7 @@ header {
     margin : 3% 30% ;  
     @media screen and (min-width: map-get($breakpoints, desktop)) {
       width : 30% ;
-      margin : 0.5% 32% ;
+      margin : 0% 35% ;
     }
   }
       
@@ -36,62 +36,55 @@ header {
     position : relative ; 
     width : 100% ;
     height : 250px ; 
-    margin : 0px ; 
+    margin : $margin_none ; 
     z-index : 1 ;
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      width : 33%; 
-      margin : 0% 30% auto ;
+      height : 300px ; 
     }
   }
     
   .restaurant_nom {
     width : 100% ;
-    height : 75px ;  
     background-color : $secondary_background ; 
     display : flex ; 
     flex-direction : row ;
-    justify-content : space-between ; 
+    align-items : center ; 
     border-radius : 30px 30px 0px 0px ; 
-    position : absolute ;
-    padding-top : 30px ; 
+    position : relative ;
+    padding-top : $padding-l ; 
     z-index : 2 ;
     margin-left : 0px ; 
     margin-top : -35px ; 
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      width : 466px ; 
       background-color : $primary_background ; 
-      margin-left : 415px ; 
       border-radius : 30px ; 
+      width : 40% ; 
+      margin-left : 30% ;
     }
   
     h1 {
       width : 80% ;
-      padding-left : 10px ; 
+      padding-left : $padding-m ; 
       font-family: 'Shrikhand', 'cursive' ;
-      font-size : 28px ; 
+      font-size : $font-size1 ; 
       font-weight : bold ; 
       letter-spacing : 1.5px ; 
       text-align : left ;
       line-height : 0px ; 
-      margin-left : 15px ; 
+      margin-left : $margin-m ; 
       @media (min-width: map-get($breakpoints, tablette)) {
         text-align: center ;
         line-height: 20px ;
         width : 70% ;
       }
       @media screen and (min-width: map-get($breakpoints, desktop)) {
-        width : 40% ; 
-        font-size : 25px ; 
-        text-align : center ; 
-        line-height : 25px ; 
+        width : 80% ; 
+        text-align : left ; 
+        margin-left : $margin-l ; 
+        font-size : 30px ; 
       }
     }
     
-    .fa-heart {
-      font-size : 30px ; 
-      color : $black_color ; 
-      padding-right : 30px ; 
-    }
   }
 }
   
